--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,8 +1,361 @@
 .header{
-    width: 99vw;
     min-height: 99dvh;
 }
 
 .header--bg{
-    background: url('/img/home/home.jpg') no-repeat center center / cover;
+    background: url('/img/home/home-bg.webp') no-repeat center center / cover;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.home-offer{
+    flex: 1 1 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: end;
+    gap: 20px;
+
+    padding: 40px 0;
+}
+
+.home-offer__text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+
+    padding: 20px;
+
+    font-size: 24px;
+    font-weight: 600;
+    
+    color: #fff;
+
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 30px;
+
+    user-select: none;
+}
+
+.home-offer__text--big{
+    font-size: 48px;
+    font-weight: 800;
+}
+
+.sale-new{
+    padding: 20px 0;
+}
+
+.slider-btns{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.slider-btns__item{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: 15px;
+
+    border-radius: 30px;
+    border: 1px solid black;
+
+    font-size: 24px;
+    font-weight: 600;
+
+    user-select: none;
+
+    cursor: pointer;
+}
+
+.slider{
+    width: 100%;
+    height: 100%;
+
+    overflow: hidden;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.slider__line{
+    display: flex;
+    align-items: center;
+}
+
+.slider__line__item{
+    width: 325px;
+    height: 220px;
+    display: flex;
+    flex-direction: column;
+}
+
+.slider__line__item__icon{
+    flex: 1 1 auto;
+}
+
+.slider__line__item__content{
+    height: 100px;
+    width: 100%;
+
+    padding: 7px 10px;
+
+    background-color: rgba(2, 2, 2, 0.5);
+
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.slider__line__item__content__text{
+    font-size: 24px;
+}
+
+.slider__line__item__content__text--big{
+    font-size: 48px;
+}
+
+.bg-dark{
+    background-color: #252525;
+}
+
+.projects{
+    padding: 60px 0;
+}
+
+.projects__title{
+    font-size: 56px;
+
+    color: #fff;
+
+    text-align: center;
+
+    margin-bottom: 50px;
+}
+
+.projects__list{
+    list-style: none;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.projetcs__list__item{
+    width: 380px;
+    height: 450px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+}
+
+.projects__list__item__text{
+    width: 100%;
+    height: 80px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    color: #000;
+
+    cursor: pointer;
+
+    background-color: rgba(217, 217, 217, 0.7);
+
+    font-size: 24px;
+}
+
+#projetcs__list__item--bread{
+    background: url('/img/home/bread.webp') no-repeat center center / cover;
+}
+
+#projetcs__list__item--coffee{
+    background: url('/img/home/coffee.webp') no-repeat center center / cover;
+}
+
+#projetcs__list__item--band{
+    background: url('/img/home/banda.webp') no-repeat center center / cover;
+}
+
+.info{
+    padding: 60px 0;
+}
+
+.info__list{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10px;
+
+    list-style: none;
+
+    margin-bottom: 40px;
+}
+
+.info__list__item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+
+    width: 190px;
+}
+
+.info__list__item__text{
+    text-align: center;
+    font-size: 15px;
+}
+
+.info__list__item__color-y{
+    font-size: 40px;
+    color: #F1B550;
+}
+
+.info__list__item__size-24{
+    font-size: 24px;
+    font-weight: 500;
+}
+
+.info__content{
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
+    gap: 150px;
+}
+
+.info__content__item{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+.info__content__item__text{
+    text-align:justify;
+    line-height: 50px;
+    font-size: 24px;
+}
+
+.address{
+    padding: 60px 0;
+
+    color: #fff;
+}
+
+.address__title{
+    text-align: center;
+    font-size: 48px;
+
+    margin-bottom: 25px;
+}
+
+.address__title--margin{
+    margin: 80px 0;
+}
+
+.address-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    width: 800px;
+    margin: 0 auto;
+}
+
+.address__contact{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    width: 100%;
+
+    padding: 20px 0;
+}
+
+.address__contact__item{
+    font-size: 24px;
+}
+
+.address__contact__item__link{
+    color: #fff;
+}
+
+.address__form{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+
+    width: 100%;
+}
+
+.address__form__group{
+    display: flex;
+    align-items: center;
+    gap: 24px;
+
+    width: 100%;
+}
+
+.address__form__input{
+    width: 100%;
+    border-radius: 20px;
+    padding: 15px;
+}
+
+.address__form__textarea{
+    resize: none;
+    width: 100%;
+    border-radius: 20px;
+    padding: 15px;
+    height: 100px;
+}
+
+.address__form__btn{
+    width: 100%;
+    height: 40px;
+
+    background-color: #FFC7A4;
+    border-radius: 20px;
+
+    font-size: 16px;
+}
+
+@media screen and (max-width: 1400px) {
+    .projects__list{
+        flex-wrap: wrap;
+        gap: 40px;
+        justify-content: space-evenly;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .address-container{
+        width: 95%;
+    }
+
+    .map{
+        width: 95%;
+    }
+
+    .info__content__item{
+        width: 100%;
+        height: 100%;
+    }
+}
+
+
+@media screen and (max-width: 700px) {
+    .info__list{
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 40px;
+    }
 }
