--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,19 +11,23 @@
     font-family: 'Montserrat Alternates';
 }
 
-.header{
-    padding: 10px 0;
-}
-
 .header--container{
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
+.header-top{
+    padding: 20px 0;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+}
+
 .logo{
     font-size: 40px;
     font-weight: 700;
+
+    user-select: none;
 }
 
 .menu-list{
@@ -58,12 +62,17 @@
 .setting__search__input{
     border-bottom: 1px solid black;
     padding: 0 5px;
+    background-color: transparent;
 }
 
 .setting__search__btn{
     height: 20px;
     width: 20px;
     background: url('/img/header/search.svg') no-repeat center center / cover;
+}
+
+.setting__search__btn--white{
+    background: url('/img/header/search-white.svg') no-repeat center center / cover;
 }
 
 .setting__icon{
@@ -183,10 +192,233 @@
 }
 
 .footer{
+    height: 250px;
+    width: 100%;
 
+    display: flex;
+    flex-direction: column;
+
+    background-color: #0E0E0E;
+
+    padding-top: 40px;
+}
+
+.footer__item-big{
+    flex: 1 1 auto;
+
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
+}
+
+.footer-theme-gray{
+    background-color: #262626;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footer-bot-text{
+    color: #fff;
+}
+
+.footer__title{
+    font-size: 44px;
+    color: #fff;
+}
+
+.footer__info{
+    display: flex;
+    justify-content: space-between;
+    gap: 100px;
+}
+
+.footer__info__item__list{
+    display: flex;
+    gap: 40px;
+}
+
+.footer__info__item__list__item{
+    list-style: none;
+}
+
+.footer__sub-list__item__link{
+    color: #fff;
+    font-size: 18px;
+}
+
+.footer__sub-list{
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
+}
+
+.footer__info__item-collumn{
+    display: flex;
+    align-items: end;
+    flex-direction: column; 
+    gap: 80px;  
+}
+
+.footer__links{
+    display: flex;
+    align-items: center;
+    gap: 16px;
+}
+
+.footer__links__item{
+    border: 1px solid #fff;
+    border-radius: 50%;
+    padding: 10px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    width: 40px;
+    height: 40px;
+
+    cursor: pointer;
+}
+
+.footer__info__email{
+    font-size: 16px;
+    color: #fff;
 }
 
 .container-big{
     width: 1680px;
     margin: 0 auto;
+}
+
+.container-small{
+    width: 1280px;
+    margin: 0 auto;
+}
+
+.menu-burger{
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+
+    position: absolute;
+    top: 9%;
+    left: 0;
+
+    opacity: 0;
+
+    padding: 20px 0;
+
+    width: 100%;
+    height: 120px;
+
+    background-color: #262626;
+}
+
+.menu-burger__menu-list{
+    flex-wrap: wrap;
+}
+
+.menu-burger__menu-list__item > a{
+    color: #fff;
+}
+
+.menu-burger__setting__search__input{
+    border-bottom: 1px solid rgb(255, 255, 255);
+}
+
+.menu-burger-language__ru{
+
+    background-color: #fff;
+    color: black;
+}
+
+.menu-burger-language__eng{
+    border: 1px solid rgb(255, 255, 255);
+    color: #fff;
+}
+
+.menu-burget-btns{
+    width: 40px;
+    padding: 1px 0;
+
+    display: none;
+    flex-direction: column;
+    gap: 7px;
+
+    cursor: pointer;
+}
+
+.menu-burget-btns__btn{
+    width: 100%;
+    height: 1px;
+
+    background: #000;
+}
+
+@media screen and (max-width: 1750px) {
+    .container-big, .container-small{
+        width: 90%;
+    }
+}
+
+@media screen and (max-width: 1600px) {
+    .menu-list__item{
+        font-size: 18px;
+    }
+
+    .info__content {
+        flex-wrap: wrap;
+        gap: 0;
+    }
+
+    .info__content__item{
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 1400px) {
+    .setting, .menu-list{
+        display: none;
+    }
+    
+    .menu-burger, .menu-burger__setting, .menu-burger__menu-list{
+        display: flex;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .footer__item-big{
+        flex-direction: column;
+        gap: 20px;
+    }
+    .menu-burger__menu-list{
+        flex-wrap: wrap;
+        padding: 0 10px;
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width: 710px) {
+    .menu-burger {
+        height: 200px;
+    }
+
+    .footer__info{
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 20px;
+        margin-bottom: 30px;
+    }
+
+    .footer {
+        height: auto;
+    }
+
+    .footer__info__item-collumn {
+        flex-direction: row;
+        gap: 20px;
+    }
 }
