--- a/public/css/home.css
+++ b/public/css/home.css
@@ -74,7 +74,7 @@
 
 .slider{
     width: 100%;
-    height: 100%;
+    height: 320px;
 
     overflow: hidden;
 
@@ -82,22 +82,26 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+    margin-top: 10px;
 }
 
 .slider__line{
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    width: 100%;
 }
 
 .slider__line__item{
     width: 325px;
-    height: 220px;
-    display: flex;
-    flex-direction: column;
+    display: block;
 }
 
 .slider__line__item__icon{
-    flex: 1 1 auto;
+    width: 100%;
+    height: 220px;
 }
 
 .slider__line__item__content{
@@ -109,12 +113,27 @@
     background-color: rgba(2, 2, 2, 0.5);
 
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-direction: column;
     gap: 10px;
 }
 
 .slider__line__item__content__text{
     font-size: 24px;
+
+    width: 100%;
+    height: 100%;
+}
+
+.slider__line__item__content__text > a{
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .slider__line__item__content__text--big{
