--- a/views/product.hbs
+++ b/views/product.hbs
@@ -140,7 +140,7 @@
                                     <h4 class="product-list__main__item__info__title">{{this.title}}</h4>
                                     <div class="product-list__main__item__info__group">
                                         <h4 class="product-list__main__item__info__price">{{this.price}} р.</h4>
-                                        <div class="product-list__main__item__info__btn">В корзину</div>
+                                        <div class="product-list__main__item__info__btn" data-food="{{this.title}}">В корзину</div>
                                     </div>
                                 </div>
                             </li>
