--- a/views/jobOperings.hbs
+++ b/views/jobOperings.hbs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/product.css">
-    <title>Продукция</title>
+    <link rel="stylesheet" href="/css/jobOperings.css">
+    <title>Вакансии</title>
 </head>
 <body>
     <div class="wrapper">
@@ -102,52 +102,115 @@
         </hedaer>
 
         <main class="main">
-            <div class="container-big product-content">
-                <ul class="product-menu">
-                    <li class="product-menu__item" data-active="true" id="js-btn-all">вся продукция</li>
-                    <li class="product-menu__item" data-active="false" id="js-btn-brekfast">завтраки</li>
-                    <li class="product-menu__item" data-active="false" id="js-btn-drink">напитки</li>
-                    <li class="product-menu__item" data-active="false" id="js-btn-cake">торты</li>
-                    <li class="product-menu__item" data-active="false" id="js-btn-sweet">пирожные</li>
-                    <li class="product-menu__item" data-active="false" id="js-btn-eclair">эклеры</li>
-                    <li class="product-menu__item" data-active="false" id="js-btn-puff">слойка</li>
-                    <li class="product-menu__item" data-active="false" id="js-btn-bread">хлеб</li>
-                    <li class="product-menu__item" data-active="false" id="js-btn-sandwiches">сэндвичи</li>
-                    <li class="product-menu__item" data-active="false" id="js-btn-soup">супы</li>
-                    <li class="product-menu__item" data-active="false" id="js-btn-hot-salad">горячие блюда и салаты</li>
-                    <li class="product-menu__item" data-active="false" id="js-btn-clothes">одежда</li>
-                    <li class="product-menu__item" data-active="false" id="js-btn-set">наборы</li>
-                </ul>
-                <div class="product-list">
-                    <div class="prooduct-list__header">
-                        <div class="product-list__title">
+            <div class="container-big">
+                <div class="search-job">
+                    <input class="search-job__input" type="text" name="search-job-input" id="search-job-input" placeholder="укажите инетересующую должность">
+                </div>
+                <div class="job-content">
+                    <form class="job-content__item">
+                        <div class="job-content__item__setting">
 
-                            <h2 class="product-list__title__text" id="js-product-title">вся продукция</h2>
+                            <h2 class="job-centent__item__setting__title">направление</h2>
 
-                            <span class="product-list__title__count">{{countFoods}}</span>
-                        </div>
-                        <div class="prooduct-list__filter">
-                            <select class="prooduct-list__filter__list-text" id="filter-title">
-                                <option class="prooduct-list__filter__list-text__value" value="price">цена</option>
-                                <option class="prooduct-list__filter__list-text__value" value="abc" selected>по алфавиту</option>
-                            </select>
-                            <div class="prooduct-list__filter__img" data-sort="big"><img id="filter-sort"  src="/img/product/filter.svg" class="prooduct-list__filter__img__icon"></div>
-                        </div>
-                    </div>
-                    <ul class="product-list__main">
-                        {{#each productFoods}}
-                            <li class="product-list__main__item" data-type="{{this.type}}">
-                                <div class="product-list__main__item__img"><img src="{{this.icon}}" class="product-list__main__item__img__icon"></div>
-                                <div class="product-list__main__item__info">
-                                    <h4 class="product-list__main__item__info__title">{{this.title}}</h4>
-                                    <div class="product-list__main__item__info__group">
-                                        <h4 class="product-list__main__item__info__price">{{this.price}} р.</h4>
-                                        <div class="product-list__main__item__info__btn" data-food="{{this.title}}">В корзину</div>
-                                    </div>
+                            <div class="job-content__item__setting__group-radios">
+                                
+                                <div class="job-centent__item__setting__group">
+                                    <input type="radio" name="direction" class="job-content__item__setting__radio" id="js-radio-retail">
+                                    <label for="js-radio-retail" class="job-content__item__setting__desk">розниц</span>
                                 </div>
-                            </li>
-                        {{/each}}
-                    </ul>
+
+                                <div class="job-centent__item__setting__group">
+                                    <input type="radio" name="direction" class="job-content__item__setting__radio" id="js-radio-production">
+                                    <label for="js-radio-production" class="job-content__item__setting__desk">производство</span>
+                                </div>
+
+                                <div class="job-centent__item__setting__group">
+                                    <input type="radio" class="job-content__item__setting__radio" id="js-radio-office">
+                                    <label for="js-radio-office" class="job-content__item__setting__desk">офис</span>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="job-content__item__setting">
+
+                            <h2 class="job-centent__item__setting__title">опыт</h2>
+
+                            <div class="job-content__item__setting__group-radios">
+
+                                <div class="job-centent__item__setting__group">
+                                    <input type="radio" class="job-content__item__setting__radio" id="js-radio-no-experience">
+                                    <label for="js-radio-no-experience" class="job-content__item__setting__desk">без опыта</span>
+                                </div>
+
+                                <div class="job-centent__item__setting__group">
+                                    <input type="radio" class="job-content__item__setting__radio" id="js-radio-one-year">
+                                    <label for="js-radio-one-year" class="job-content__item__setting__desk">до года</span>
+                                </div>
+
+                                <div class="job-centent__item__setting__group">
+                                    <input type="radio" class="job-content__item__setting__radio" id="js-radio-one-year-more">
+                                    <label for="js-radio-one-year-more" class="job-content__item__setting__desk">от 1 года</span>
+                                </div>
+                                
+                                <div class="job-centent__item__setting__group" id="js-radio-two-year-more">
+                                    <input type="radio" class="job-content__item__setting__radio">
+                                    <label for="js-radio-two-year-more" class="job-content__item__setting__desk">более 2 лет</span>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="job-content__item__setting">
+
+                            <h2 class="job-centent__item__setting__title">тип занятости</h2>
+                            
+                            <div class="job-content__item__setting__group-radios">
+                                
+                                <div class="job-centent__item__setting__group">
+                                    <input type="radio" class="job-content__item__setting__radio" id="js-radio-full">
+                                    <label for="js-radio-full" class="job-content__item__setting__desk">полная</span>
+                                </div>
+
+                                <div class="job-centent__item__setting__group">
+                                    <input type="radio" class="job-content__item__setting__radio" id="js-radio-partial">
+                                    <label for="js-radio-partial" class="job-content__item__setting__desk">частичная</span>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <button type="reset" class="job-content__item__setting__btn">очистить фильтры</button>
+                        
+                    </form>
+                    <div class="job-content__item job-content__item--big">
+                        <ul class="job-content__list-job">
+                            {{#each list-job}}
+                                <li class="job-content__list-job__item">
+                                    <div class="job-content__list-job__item__sublist">
+                                        <h3 class="job-content__list-job__item__title">{{this.title}}</h3>
+                                        <ul class="job-content__list-job__item__sublist__contain">
+                                            {{#each this.job-sublist}}
+                                                <li class="job-content__list-job__item__sublist__item">{{this}}</li>
+                                            {{/each}}
+                                        </ul>
+                                        <ul class="job-content__job-info">
+                                            {{#each this.job-info}}
+                                                <li class="job-content__list-job__item__sublist__item">{{this}}</li>
+                                            {{/each}}
+                                        </ul>
+                                    </div>
+                                    <div class="job-content__list-job__item__setting">
+                                        <h3 class="job-content__list-job__item__setting__title">от {{this.price}} рублей</h3>
+                                        <button class="job-content__list-job__item__setting__btn" type="button">подробнее</button>
+                                    </div>
+                                </li>
+                            {{/each}}
+                        </ul>
+                    </div>
                 </div>
             </div>
         </main>
@@ -198,7 +261,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/mobile-detect@1.4.5/mobile-detect.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-    <script src="/js/product.js"></script>
+    <script src="/js/jobOperings.js"></script>
     <script src="/js/main.js"></script>
 </body>
 </html>
